--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.9.0",
+    "babel-cli": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "express": "^4.13.4",
     "express-graphql": "^0.5.3",
     "graphql": "^0.6.0",
     "mongodb": "^2.1.20"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.9.0"
   }
 }
